cabal-version:       2.4

name:                duality
version:             0.1.0.0
synopsis:            A project dedicated to exploring the notion of duality in functors.
homepage:            https://github.com/SamuelSchlesinger/duality
license:             BSD-3-Clause
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
copyright:           2019 (c) Samuel Schlesinger
category:            Control
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Control.Duality
  -- other-modules:
  -- other-extensions:
  default-extensions:  MultiParamTypeClasses  
                     , KindSignatures
                     , QuantifiedConstraints
                     , DefaultSignatures
                     , TypeOperators
                     , UndecidableInstances
                     , RankNTypes
                     , FunctionalDependencies
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
